<resources>
    <string name="app_name">Достопримечательности Оренбуржья</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="culture_title"></string>
    <string name="nature">Природа</string>
    <string name="culture">Культура</string>
    <string name="excursions">Экскурсии</string>
    <string name="nature_page_1">Интересные места</string>
    <string name="nature_page_2">Заповедники</string>
    <string name="description_page_1">Описание</string>
    <string name="description_page_2">Места отдыха</string>
    <string name="culture_description_page_2">На карте</string>
    <string name="excursions_info_page_2">Информация</string>
    <string name="rp_title">Title</string>
    <string name="rp_phone">Телефон:</string>
    <string name="rp_street">Адрес:</string>
</resources>